--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,6 +152,7 @@
         android:layout_height="0dp"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
+        android:onClick="play"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline12"
@@ -160,7 +161,7 @@
         app:srcCompat="@drawable/ic_baseline_play" />
 
     <ImageButton
-        android:id="@+id/bt_voltar"
+        android:id="@+id/bt_previous"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
@@ -174,7 +175,7 @@
         app:srcCompat="@drawable/ic_baseline_skip_previous" />
 
     <ImageButton
-        android:id="@+id/bt_proximo"
+        android:id="@+id/bt_next"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
