--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#32cd32</color>
-    <color name="colorPrimaryDark">#353535</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorGradDark">#1c1c1c</color>
+    <color name="colorPrimaryDark">#101010</color>
+    <color name="colorAccent">#4E4E4E</color>
+    <color name="colorGradDark">#202020</color>
     <color name="colorGradLight">#555555</color>
     <color name="colorTextLight">#afafaf</color>
 </resources>
