Music player on notification

--- a/app/src/main/res/drawable/grad_bg.xml
+++ b/app/src/main/res/drawable/grad_bg.xml
@@ -5,6 +5,7 @@
             <gradient
                 android:startColor="@color/colorGradLight"
                 android:endColor="@color/colorGradDark"
+                android:type="linear"
                 android:angle="270"/>
         </shape>
     </item>
